# custom-GPT

./: .gitignore  .last_config  CHANGELOG.md  CLAUDE.md  CONFIG_MANAGEMENT.md  CONTRIBUTING.md  Claude.md  GPT_test_generator.json  LICENSE  README.md  README_CPP.md  TESTING.md  claude_agent.py  claude_agent_gui.py  code_review_agent_config.json  context.txt  custom_agent_creator.py  launch-cpp.sh  launch-python.sh  run-tests-all.sh  run-tests-cpp.sh  run-tests-python.sh  test_complex_message.cpp  test_gui_simple.cpp  test_logging.cpp
.github/: README.md
configs/: .last_config  agent_config.json  gilts_assistant.json  learning_agent_config.json  writing_agent_config.json
cpp/: CMakeLists.txt  Makefile  README.md  test_claude_agent_unit.cpp  test_complex  test_config_library_functionality.cpp  test_config_scan  test_config_scan.cpp  test_gui_simple  test_logging  test_logging.cpp
cpp/include/: claude_agent.h  config_dialog.h  json_utils.h  logger.h
cpp/src/: claude_agent.cpp  claude_agent_gui.cpp  config_dialog.cpp  config_library_dialog.cpp  json_utils.cpp
include/: claude_agent_gui.h  config_library_dialog.h
python/: README.md  claude_agent.py  claude_agent_gui.py  demo.py  test_claude_agent.py  test_claude_agent_gui.py
python/configs/: saved_config.json
src/: claude_agent.cpp  claude_agent_gui.cpp  config_library_dialog.cpp  logger.cpp  main.cpp
